# colink-slack-clone

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  RESTRUCTURING_SUMMARY.md  SCALING_PLAN.md  SUPERADMIN_SETUP.md  alembic.ini  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  cicd_deploy.yml  docker-build.yml
alembic/versions/: 930f7ed16793_convert_timestamp_columns_to_timezone_.py  a4fe540baa63_initial_schema_users_table.py  f2d2f62f1fb3_add_all_domain_models_channels_messages_.py
backend/: pyproject.toml  requirements-dev.txt  requirements.txt  seed_analytics_data.py  setup_keycloak.py  test_complete_flow.py
backend/alembic/: env.py
backend/infrastructure/keycloak/: realm-export.json
backend/infrastructure/postgres/: init.sql
backend/services/auth-proxy/: Dockerfile  __init__.py  main.py  middleware.py  requirements.txt
backend/services/auth-proxy/routers/: admin.py  auth.py  health.py
backend/services/auth-proxy/services/: keycloak.py
backend/services/channel/: Dockerfile  __init__.py  config.py  dependencies.py  main.py  middleware.py  requirements.txt
backend/services/channel/routers/: __init__.py  health.py  members.py
backend/services/channel/services/: __init__.py  kafka_producer.py
backend/services/files-service/: Dockerfile  config.py  dependencies.py  main.py  requirements.txt
backend/services/files-service/middleware/: __init__.py  auth.py  auth_jwt.py
backend/services/files-service/routers/: __init__.py  files.py
backend/services/files-service/schemas/: files.py
backend/services/files-service/services/: file_manager.py  kafka_producer.py  minio_service.py  thumbnail_service.py
backend/services/files-service/test/: test_files_service.py
backend/services/message/: Dockerfile  __init__.py  config.py  dependencies.py  main.py  middleware.py  requirements.txt
backend/services/message/routers/: __init__.py  analytics.py  health.py  messages.py  reactions.py
backend/services/message/services/: __init__.py  kafka_producer.py
backend/services/notifications/: Dockerfile  dependencies.py  main.py  requirements.txt
backend/services/notifications/middleware/: __init__.py  auth.py
backend/services/notifications/routers/: notifications.py
backend/services/notifications/schemas/: notifications.py
backend/services/notifications/services/: notification_manager.py
backend/services/reactions/: Dockerfile  dependencies.py  main.py  middleware.py  requirements.txt
backend/services/reactions/schemas/: reactions.py
backend/services/reactions/services/: __init__.py  kafka_consumer.py
backend/services/threads/: Dockerfile  config.py  dependencies.py  main.py  middleware.py  requirements.txt
backend/services/threads/routers/: __init__.py  health.py  threads.py
backend/services/threads/schemas/: __init__.py  threads.py
backend/services/threads/services/: __init__.py  kafka_consumer.py  kafka_producer.py
backend/services/websocket/: Dockerfile  main.py  requirements.txt
backend/shared/database/: __init__.py  models.py
docs/: README.md
docs/architecture/: 00-executive-summary.md  01-system-architecture.md  02-data-flows.md  03-security-model.md  04-scalability-reliability.md  05-service-inventory.md
docs/diagrams/: c4-context.md
frontend/: Dockerfile  next.config.ts  test-token.js
frontend/src/app/: globals.css  providers.tsx
frontend/src/components/: ChannelHeader.tsx  CreateChannelModal.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  OnlineStatus.tsx  ProfileModal.tsx  Sidebar.tsx  ThemeProvider.tsx  ThreadPanel.tsx  TypingIndicator.tsx  (+1 more)
monitoring/: grafana-dashboard.json  prometheus.yml
scripts/: AWS_DEPLOYMENT.md  README.md  aws-deploy.sh  setup_superadmin.py  setup_superadmin.sh  sync_users.py
services/auth-proxy/: Dockerfile  QUICK_TEST.md  TESTING_GUIDE.md  TEST_GUIDE.md  config.py  main.py  manual_test_guide.sh  requirements.txt  test_auth_apis.py  test_auth_apis.sh
services/files-service/: Dockerfile  dependencies.py  main.py
services/notifications/: Dockerfile  __init__.py  config.py  requirements.txt
services/reactions/: Dockerfile  __init__.py  config.py  main.py  middleware.py  requirements.txt
services/threads/: middleware.py
services/websocket/: config.py  main.py
shared/database/: __init__.py  base.py  models.py
(+38 files in other folders)
